--- a/styles/flower.css
+++ b/styles/flower.css
@@ -176,5 +176,76 @@
     
 }
 .insta{
-    margin: 100px 0px 20px 0px ;
+    margin-top: 100px;
+}
+.presenting-flower{
+    max-width: 1440px;
+    margin: 10px auto;
+
+}
+.see-flower{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.latest-deals{
+    max-width: 1440px;
+    height: 450px;
+    margin: 100px auto;
+    background-image: url(../Rectangle\ 9.png);
+    background-repeat: no-repeat;
+}
+.deals-here{
+    align-items: center;
+    padding: 150px 230px 130px 270px;
+}
+.email{
+    width: 690px;
+    height: 55px;
+    border: none;
+    border-radius: 10px;
+    margin-right: 10px;
+    padding-left: 20px;
+
+}
+.deals-head{
+    color: #272727;
+    text-align: center;
+    font-family: Lato, sans-serif;
+    font-size: 40px;
+    margin-bottom: 15px;
+}
+.deals-des{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato, sans-serif;
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+.footer{
+    width: 100%;
+    height: 400px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding-top: 220px;
+}
+.footer-head{
+    font-family: Lato, sans-serif;
+    font-size: 48px;
+
+}
+.footer-span{
+    color: #E55473;
+}
+.footer-des{
+    font-family: Lato, sans-serif;
+    font-size: 18px;
+    margin-top: 30px;
+}
+.credit{
+    color: rgba(255, 255, 255, 0.40);
+    font-family: Lato, sans-serif;
+    font-size: 16px;
+    margin-top: 40px;
 }
