--- a/styles/flower.css
+++ b/styles/flower.css
@@ -5,10 +5,7 @@
 /* Banner section styles */
 .header{
     background-color: rgba(229, 84, 115, 0.10);;
-    width: 100%;
-    
-    
-    
+    width: 100%;   
 }
 .banner-container{
     display: flex;
@@ -17,9 +14,7 @@
     padding: 0px 200px;
     
 }
-.banner-title{
-    
-}
+
 .banner-head{
     color: #272727;
     font-family: lato, sans-serif;
@@ -55,9 +50,6 @@
     
 }
 
-.featured{
-    
-}
 .featured-head{
     color: #272727;
     text-align: center;
@@ -87,7 +79,6 @@
     background-color: rgba(167, 33, 98, 0.15);
     width: 464px;
     height: 538px;
-    /* padding: 50px; */
     border-radius: 300px 300px 0px 0px;
 
 }
@@ -95,7 +86,6 @@
     background-color: rgba(5, 151, 160, 0.15);
     width: 464px;
     height: 538px;
-    /* padding: 50px; */
     border-radius: 300px 300px 0px 0px;
 
 }
@@ -103,7 +93,6 @@
     background-color: rgba(71, 125, 17, 0.15);
     width: 464px;
     height: 538px;
-    /* padding: 50px; */
     border-radius: 300px 300px 0px 0px;
 
 }
@@ -175,6 +164,45 @@
     margin: 20px 0px;
     
 }
+.our-blog{
+    max-width: 1440px;
+    margin: 100px auto;
+}
+.blog-head{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.blog-title{
+    font-size: 60px;
+}
+.blog-picture{
+    display: flex;
+    justify-content: space-between;
+    gap: 120px;
+    margin-top: 50px;
+}
+.blog-picture1{
+    
+}
+.blog-img{
+    height: 400px;
+    width: 400px;
+    border-radius: 30px;
+}
+.time{
+    margin-top: 15px;
+    color: rgba(39, 39, 39, 0.60);
+    font-family: Lato, sans-serif;
+    font-size: 16px;
+}
+.blog-des{
+    margin-top: 10px;
+    width: 100%;
+    font-family: Lato, sans-serif;
+    font-size: 25px;
+}
+
 .insta{
     margin-top: 100px;
 }
@@ -223,8 +251,8 @@
     margin-bottom: 20px;
 }
 .footer{
-    width: 100%;
-    height: 400px;
+    /* width: 100%; */
+    height: 50vh;
     background-color: black;
     color: white;
     text-align: center;
