--- a/styles/flower.css
+++ b/styles/flower.css
@@ -202,6 +202,14 @@
     font-family: Lato, sans-serif;
     font-size: 25px;
 }
+.button{
+    
+    border: 2px solid #E55473;
+    border-radius: 10px;
+    padding: 20px 45px;
+    margin-top: 20px;
+    color: #E55473;
+}
 
 .insta{
     margin-top: 100px;
